<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.melodies.bandup.main_screen_activity.MainScreenActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile_picture_big"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:id="@+id/animated_check"
            android:src="@drawable/ic_check_dark"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:alpha="0.5"
            android:tint="@color/bandUpYellow"/>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_top_row"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Display Name"
                android:textColor="@color/bandUpYellow"
                android:textSize="25sp"
                android:layout_weight="1"
                android:maxLines="1"

                android:ellipsize="end"
                />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                />

            <TextView
                android:id="@+id/txtMainInstrument"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:maxLines="1"
                android:text="Instrument"
                android:textColor="@color/bandUpYellow"
                android:textSize="25sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Age"
                android:textColor="@color/colorWhite" />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/txtGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Genre"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/txtDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Distance"
                android:textColor="@color/colorWhite" />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/txtPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Percentage"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:text="@string/user_list_details"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:background="@drawable/button_user_list_details"
                android:id="@+id/btnDetails"
                android:textSize="35sp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:textColor="#000000"
                android:textAllCaps="false"/>
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

                <Button
                    android:text="@string/user_list_like"
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:id="@+id/btnLike"
                    android:background="@drawable/button_user_list_like"
                    android:textSize="35sp"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:textAllCaps="false"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

