...
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.melodies.bandup.main_screen_activity.MainScreenActivity"
            tools:showIn="@layout/app_bar_main_screen">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1">
            </android.support.v4.view.ViewPager>

        </LinearLayout>
...
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNoUsers"
        android:text="@string/user_list_no_users"
        android:visibility="invisible"
        android:textSize="20sp"
        android:textColor="@color/bandUpYellow"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>
...
