...
                                android:layout_marginBottom="15dp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:id="@+id/txtInstrumentsList"
                                android:textSize="18sp"/>
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
...
                                android:layout_marginBottom="15dp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:id="@+id/txtGenresList"
                                android:textSize="18sp"/>
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
...
